# PingPair-Openchat

./: .env.example  .gitignore  Cargo.toml  README.md  dfx.json  identity.pem  package-lock.json  package.json  pnpm-workspace.yaml  render.yaml  server.js  test_server.js  vercel.json  verify.js
docs/: dev-notes.md  file-tree.md  partner-update.md  pitch-deck.md  task-log.md
docs/api/: endpoints.md
docs/dev/: architecture.md  contributing.md  dev-notes.md
docs/guides/: commands.md  elizaos-integration.md  setup.md
docs/project/: changelog.md  roadmap.md
elizaos/: README.md  cultural-provider.ts  index.js  index.ts  match-action.ts  package.json  pingpair-eliza-demo.js  pingpair.character.json  setup.sh  template.character.json  tsconfig.json
elizaos/data/actions/: createMatch.js  scheduleSession.js
elizaos/data/providers/: cultural.js  timezone.js
scripts/: setup_bot.sh
src/: lib.rs  main.rs  test_ping.rs
src/api/: country_service.rs  handlers.rs  mod.rs
src/commands/: mod.rs  pingpair.rs  pingpair_new.rs
src/model/: mod.rs  state.rs  types.rs
src/pingpair_bot/: Cargo.toml  pingpair_bot.did
src/pingpair_bot/src/: lib.rs
